--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.12",
     "@storybook/addon-storyshots": "^6.5.13",
+    "@types/react-test-renderer": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1"
